# HydroX

./: .clang-format  .clangd  CMakeLists.txt  README.md  conanfile.txt
hydrox/: CMakeLists.txt  main.cc
hydrox/core/: CMakeLists.txt  core.cc
hydrox/data/: CMakeLists.txt  data.cc
hydrox/model/: CMakeLists.txt  model.cc
hydrox/utils/: CMakeLists.txt  utils.cc
hydrox/web/: CMakeLists.txt  web.cc
